Added requiresAuth()
